Client+server language
Summary: T144

Test Plan: ..

Reviewers: dragos.pricope, catalin.dobre

Subscribers: ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D62

--- a/config/locales/dk.json
+++ b/config/locales/dk.json
@@ -2,5 +2,6 @@
 	"Ok" : "Ok",
 	"Problem checking the VAT": "Problem kontrollere VAT",
 	"The VAT is not in EU": "VAT er ikke i EU",
-	"Invalid VAT format" : "Ugyldig VAT format"
+	"Invalid VAT format" : "Ugyldig VAT format",
+	"Error logging in. Please check your credentials and try again.": "Fejl logge ind. Kontroller dine legitimationsoplysninger, og prøv igen."
 }
