--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -2,5 +2,6 @@
 	"Ok" : "Ok",
 	"Problem checking the VAT": "Problem checking the VAT",
 	"The VAT is not in EU": "The VAT is not in EU",
-	"Invalid VAT format" : "Invalid VAT format"
+	"Invalid VAT format" : "Invalid VAT format",
+	"Error logging in. Please check your credentials and try again.": "Error logging in. Please check your credentials and try again."
 }
