[T244] Created the mark bookings as guarantee process

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -1,6 +1,7 @@
 {
 	// booking history
 	"Booking was created": "Booking was created",
+	"Booking was marked as Guaranteed by the System": "Booking was marked as Guaranteed by the System",
 
 
 	// ThResponse
