--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -2,7 +2,9 @@
 	// booking history
 	"Booking was created": "Booking was created",
 	"Booking was marked as Guaranteed by the System": "Booking was marked as Guaranteed by the System",
-
+	"Booking was marked as No Show by the System": "Booking was marked as No Show by the System",
+	"Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.": "Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.",
+	
 
 	// ThResponse
 
