bootstrapped invoice email sender service

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -43,6 +43,7 @@
 	"Booking Ref": "Booking Ref",
 	"Group Booking Ref": "Group Booking Ref",
 	"Booking Confirmation": "Booking Confirmation",
+	"Invoice": "Invoice",
 	"Contact": "Contact",
 	"Address": "Address",
 	"Check-In": "Check-In",
