[T243] Created tests for all the operational dashboard features

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -4,7 +4,10 @@
 	"Booking was marked as Guaranteed by the System": "Booking was marked as Guaranteed by the System",
 	"Booking was marked as No Show by the System": "Booking was marked as No Show by the System",
 	"Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.": "Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.",
-	
+	"The customers were moved to room %roomName%": "The customers were moved to room %roomName%",
+	"The customers were checked in room %roomName%": "The customers were checked in room %roomName%",
+	"Room %roomName% was reserved for this booking.": "Room %roomName% was reserved for this booking.",
+	"The room was checked out.": "The room was checked out.",
 
 	// ThResponse
 
