[T241] Booking details editor

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -12,6 +12,7 @@
 	"The booking was marked as a late arrival and will be marked as no show at %noShowTime%.": "The booking was marked as a late arrival and will be marked as no show at %noShowTime%.",
 	"The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.": "The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.",
 	"A payment guarantee has been added.": "A payment guarantee has been added.",
+	"The details of the booking have been changed": "The details of the booking have been changed",
 	
 	
 
