--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -13,6 +13,8 @@
 	"The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.": "The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.",
 	"A payment guarantee has been added.": "A payment guarantee has been added.",
 	"The details of the booking have been changed": "The details of the booking have been changed",
+	"The customers from the booking have been changed": "The customers from the booking have been changed",
+	
 	
 	
 
