--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -14,7 +14,9 @@
 	"A payment guarantee has been added.": "A payment guarantee has been added.",
 	"The details of the booking have been changed": "The details of the booking have been changed",
 	"The customers from the booking have been changed": "The customers from the booking have been changed",
-	
+	"The booking has been cancelled": "The booking has been cancelled",
+	"The booking has been cancelled. The booking has a penalty.": "The booking has been cancelled. The booking has a penalty.",
+	"The booking has been reactivated.": "The booking has been reactivated.",
 	
 	
 
