[T238] rollaway capacity feature

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -17,6 +17,7 @@
 	"The booking has been cancelled": "The booking has been cancelled",
 	"The booking has been cancelled. The booking has a penalty.": "The booking has been cancelled. The booking has a penalty.",
 	"The booking has been reactivated.": "The booking has been reactivated.",
+	"Some rollaway beds were added in the room to fit the booking capacity": "Some rollaway beds were added in the room to fit the booking capacity",
 	
 	
 
