--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -79,6 +79,7 @@
 	"Address": "Address",
 	"Check-In": "Check-In",
 	"Check-Out": "Check-Out",
+	"Included in Price": "Included in Price",
 	"Price": "Price",
 	"Room": "Room",
 	"room": "room",
@@ -101,5 +102,5 @@
 	"Booking": "Booking",
 	"Cancellation Penalty": "Cancellation Penalty",
 	"Booking (includes %breakfastName%)": "Booking (includes %breakfastName%)"
-	
+
 }
