[T238] Reserve add on products on booking

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -18,6 +18,8 @@
 	"The booking has been cancelled. The booking has a penalty.": "The booking has been cancelled. The booking has a penalty.",
 	"The booking has been reactivated.": "The booking has been reactivated.",
 	"Some rollaway beds were added in the room to fit the booking capacity": "Some rollaway beds were added in the room to fit the booking capacity",
+	"%noReservedAddOnProducts% add on product(s) have been reserved for the booking": "%noReservedAddOnProducts% add on product(s) have been reserved for the booking",
+	
 	
 	
 
