[T238] included reserved AOP on booking confirmation

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -82,6 +82,8 @@
 	"Check-In": "Check-In",
 	"Check-Out": "Check-Out",
 	"Included in Price": "Included in Price",
+	"Reserved Add-On-Products": "Reserved Add-On-Products",
+	"* Not included in the reservation's price": "* Not included in the reservation's price",
 	"Price": "Price",
 	"Room": "Room",
 	"room": "room",
