--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -105,6 +105,7 @@
 	"%noAdults% adults, %noChildren% children, %noBabies% babies": "%noAdults% adults, %noChildren% children, %noBabies% babies",
 	"cm (wide)": "cm (wide)",
 	"n/a": "n/a",
+	"Included in Room Price": "Included in Room Price",
 
 	// BookingPriceDO
 	"Booking": "Booking",
