--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -68,10 +68,10 @@
 	"Minimum %noOfAdults% adults": "Minimum %noOfAdults% adults",
 	"Minimum %noOfRooms% rooms": "Minimum %noOfRooms% rooms",
 	"Must Arrive on %daysFromWeek%": "Must Arrive on %daysFromWeek%",
-	"Can cancel whenever": "Can cancel whenever",
+	"Can cancel any time": "Can cancel any time",
 	"Can cancel until %hour% on day of arrival": "Can cancel until %hour% on day of arrival",
 	"Can cancel %daysBefore% days before arrival": "Can cancel %daysBefore% days before arrival",
-	"No cancellation possible": "No cancellation possible",
+	"No cancellation": "No cancellation",
 	"Pay first night": "Pay first night",
 	"Pay full stay": "Pay full stay",
 	"No penalty": "No penalty",
