[T266] Added check-in/out details on booking confirmation

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -88,6 +88,7 @@
 	"Included in Price": "Included in Price",
 	"Reserved Add-On-Products": "Reserved Add-On-Products",
 	"* Not included in the reservation's price": "* Not included in the reservation's price",
+	"None reserved. Please contact the property for details.": "None reserved. Please contact the property for details.",
 	"Price": "Price",
 	"Room": "Room",
 	"room": "room",
@@ -101,6 +102,8 @@
 	"Cancellation Policy": "Cancellation Policy",
 	"Constraints": "Constraints",
 	"the price includes": "the price includes",
+	"Check In from %checkInHour%": "Check In from %checkInHour%",
+	"Check Out until %checkOutHour%": "Check Out until %checkOutHour%",
 	"VAT": "VAT",
 	"%noAdults% adults, %noChildren% children, %noBabies% babies": "%noAdults% adults, %noChildren% children, %noBabies% babies",
 	"cm (wide)": "cm (wide)",
