T266 Booking confirmation email refactoring

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -108,6 +108,7 @@
 	"%noAdults% adults, %noChildren% children, %noBabies% babies": "%noAdults% adults, %noChildren% children, %noBabies% babies",
 	"cm (wide)": "cm (wide)",
 	"n/a": "n/a",
+	"none": "none",
 	"Included in Room Price": "Included in Room Price",
 
 	// BookingPriceDO
