--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -128,5 +128,6 @@
 	"Net Subtotal": "Net Subtotal",
 	"Payment Method": "Payment Method",
 	"PAY INVOICE BY AGREEMENT": "PAY INVOICE BY AGREEMENT",
-	"Shared Payment": "Shared Payment" 
+	"Shared Payment": "Shared Payment",
+	"Guest": "Guest"
 }
