#2 added vat on invoice and removed bed sizes from booking confirmation

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -82,6 +82,7 @@
 	"Booking Confirmation": "Booking Confirmation",
 	"Invoice": "Invoice",
 	"Contact": "Contact",
+	"VAT": "VAT",
 	"Address": "Address",
 	"Check-In": "Check-In",
 	"Check-Out": "Check-Out",
