#76 Refactored invoice pdf's structure

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -107,6 +107,7 @@
 	"Check In from %checkInHour%": "Check In from %checkInHour%",
 	"Check Out until %checkOutHour%": "Check Out until %checkOutHour%",
 	"VAT": "VAT",
+	"Government Code": "Government Code",
 	"%noAdults% adults, %noChildren% children, %noBabies% babies": "%noAdults% adults, %noChildren% children, %noBabies% babies",
 	"cm (wide)": "cm (wide)",
 	"n/a": "n/a",
