#96 Included AOP List in the shift report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -169,6 +169,8 @@
 	"Product": "Product",
 	"Shift Report": "Shift Report",
 	"Product Category": "Product Category",
-	"No Category": "No Category"
+	"No Category": "No Category",
+	"Add On Product": "Add On Product",
+	"Invoice Fee": "Invoice Fee"
 
 }
