#96 Handle invoice paid by agreement & Group the AOP and AOPCategs by ids

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -171,6 +171,7 @@
 	"Product Category": "Product Category",
 	"No Category": "No Category",
 	"Add On Product": "Add On Product",
-	"Invoice Fee": "Invoice Fee"
+	"Invoice Fee": "Invoice Fee",
+	"Paid By Agreement": "Paid By Agreement"
 
 }
