#96 Included the net, vat & total breakdown in the shift report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -172,6 +172,8 @@
 	"No Category": "No Category",
 	"Add On Product": "Add On Product",
 	"Invoice Fee": "Invoice Fee",
-	"Paid By Agreement": "Paid By Agreement"
+	"Paid By Agreement": "Paid By Agreement",
+	"Net Price": "Net Price",
+	"Subtotal": "Subtotal"
 
 }
