--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -174,6 +174,7 @@
 	"Invoice Fee": "Invoice Fee",
 	"Paid By Agreement": "Paid By Agreement",
 	"Net Price": "Net Price",
-	"Subtotal": "Subtotal"
+	"Subtotal": "Subtotal",
+	"Dates": "Dates"
 
 }
