#87 Round key metric values to integer values

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -175,7 +175,7 @@
 	"Paid By Agreement": "Paid By Agreement",
 	"Net Price": "Net Price",
 	"Subtotal": "Subtotal",
-	"Dates": "Dates",
+	"Metric": "Metric",
 	"Guests Arriving": "Guests Arriving",
 	"Guests Departing": "Guests Departing",
 	"Guests In House": "Guests In House",
