#92 Added the lost by management transactions in the shift report - grouped by their category

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -182,6 +182,7 @@
 	"Add On Product Transactions": "Add On Product Transactions",
 	"Transactions Grouped by Category": "Transactions Grouped by Category",
 	"Transactions Grouped by Payment Method": "Transactions Grouped by Payment Method",
+	"Loss Accepted By Management Transactions Grouped by Category": "Loss Accepted By Management Transactions Grouped by Category",
 	"Part %partNo%": "Part %partNo%"
 
 }
