--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -11,6 +11,7 @@
 	"The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.": "The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.",
 	"The booking was marked as a late arrival and will be marked as no show at %noShowTime%.": "The booking was marked as a late arrival and will be marked as no show at %noShowTime%.",
 	"The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.": "The booking capacity was changed from %oldAdults% ad %oldChildren% ch %oldBabies% b to %newAdults% ad %newChildren% ch %newBabies% b. The old price %oldPrice% has become %newPrice%.",
+	"The booking capacity was changed from %oldAdults%/%oldChildren%/%oldBabies%/%oldBabyBeds% to %newAdults%/%newChildren%/%newBabies%/%newBabyBeds%. The old price %oldPrice% has become %newPrice%.": "The booking capacity was changed from %oldAdults%/%oldChildren%/%oldBabies%/%oldBabyBeds% to %newAdults%/%newChildren%/%newBabies%/%newBabyBeds%. The old price %oldPrice% has become %newPrice%.",
 	"A payment guarantee has been added.": "A payment guarantee has been added.",
 	"The details of the booking have been changed": "The details of the booking have been changed",
 	"The customers from the booking have been changed": "The customers from the booking have been changed",
@@ -106,6 +107,7 @@
 	"VAT": "VAT",
 	"Government Code": "Government Code",
 	"%noAdults% adults, %noChildren% children, %noBabies% babies": "%noAdults% adults, %noChildren% children, %noBabies% babies",
+	"%noAdults% adults, %noChildren% children, %noBabies% babies, %noBabyBeds% baby beds": "%noAdults% adults, %noChildren% children, %noBabies% babies, %noBabyBeds% baby beds",
 	"cm (wide)": "cm (wide)",
 	"n/a": "n/a",
 	"none": "none",
@@ -149,6 +151,7 @@
 	"Adults": "Adults",
 	"Children": "Children",
 	"Babies": "Babies",
+	"Baby Beds": "Baby Beds",
 	"Booking status": "Booking status",
 	"Total price": "Total price",
 	"No show time":"No show time",
