#139 Show the booking's date price breakdown on invoices (back-end)

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -133,6 +133,7 @@
 	"PAY INVOICE BY AGREEMENT": "PAY INVOICE BY AGREEMENT",
 	"Shared Payment": "Shared Payment",
 	"Guest": "Guest",
+	"Accomodation for %date%": "Accomodation for %date%",
 
 	// Reports
 	"TotalOccupancy" : "TotalOccupancy",
