#140 Displayed loss accepted by management as the payment method when invoice is marked as so

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -131,6 +131,7 @@
 	"Net Subtotal": "Net Subtotal",
 	"Payment Method": "Payment Method",
 	"PAY INVOICE BY AGREEMENT": "PAY INVOICE BY AGREEMENT",
+	"LOSS ACCEPTED BY MANAGEMENT": "LOSS ACCEPTED BY MANAGEMENT",
 	"Shared Payment": "Shared Payment",
 	"Guest": "Guest",
 	"Accomodation for %date%": "Accomodation for %date%",
