--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -191,6 +191,9 @@
 	"Part %partNo%": "Part %partNo%",
 	"Invoice Reference": "Invoice Reference",
 	"Customer": "Customer",
-	"Paid Invoices": "Paid Invoices"
+	"Paid Invoices": "Paid Invoices",
 
+	// Booking confirmations
+	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
+	
 }
