#212 Reordered Key Metrics from the Yield Manager; updated labels

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -145,6 +145,7 @@
 	"ConfirmedAvgRate" : "ConfirmedAvgRate",
 	"Rooms" : "Rooms",
 	"Allotments" : "Allotments",
+	"Allotments Total": "Allotments Total",
 	"RoomRevenue" : "RoomRevenue",
 	"OtherRevenue" : "OtherRevenue",
 	"BackUp Report": "BackUp Report",
@@ -161,13 +162,13 @@
 	"Notes": "Notes",
 	"Departing Date": "Departing Date",
 	"Key Metrics": "Key Metrics",
-	"Total RevPar": "Total RevPar",
-	"Total Occupancy": "Total Occupancy",
-	"Confirmed Occupancy": "Confirmed Occupancy",
-	"Total AvgRate": "Total AvgRate",
-	"Room Revenue": "Room Revenue",
-	"Other Revenue": "Other Revenue",
-	"Confirmed Revenue": "Confirmed Revenue",
+	"RevPar Total": "RevPar Total",
+	"Occupancy Total": "Occupancy Total",
+	"Occupancy Confirmed": "Occupancy Confirmed",
+	"AvgRate Total": "AvgRate Total",
+	"Room Revenue Total": "Room Revenue Total",
+	"Other Revenue Total": "Other Revenue Total",
+	"Room Revenue Confirmed": "Room Revenue Confirmed",
 	"Total": "Total",
 	"Payment method": "Payment method",
 	"Transactions": "Transactions",
