#239 Changed data objects to support commissions

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -179,6 +179,7 @@
 	"No Category": "No Category",
 	"Add On Product": "Add On Product",
 	"Invoice Fee": "Invoice Fee",
+	"Deducted Room Commission": "Deducted Room Commission",
 	"Paid By Agreement": "Paid By Agreement",
 	"Net Price": "Net Price",
 	"Subtotal": "Subtotal",
