#256 Grouped invoices by customer and account number in the shift report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -216,6 +216,8 @@
 	"Babies (in baby beds)": "Babies (in baby beds)",
 	"Stationary Beds": "Stationary Beds",
 	"Rollaway Beds": "Rollaway Beds",
+	"Payd By Agreement Breakdown": "Payd By Agreement Breakdown",
+	"account no.": "account no.",
 
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
