--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -218,6 +218,8 @@
 	"Rollaway Beds": "Rollaway Beds",
 	"Payd By Agreement Breakdown": "Payd By Agreement Breakdown",
 	"account no.": "account no.",
+	"Amount (fee included)": "Amount (fee included)",
+	"Amount (without fee)": "Amount (without fee)",
 
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
