#163 Do not recompute booking's penalty price if its invoice is closed

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -3,6 +3,7 @@
 	"Booking was created": "Booking was created",
 	"Booking was marked as Guaranteed by the System": "Booking was marked as Guaranteed by the System",
 	"Booking was marked as No Show by the System": "Booking was marked as No Show by the System",
+	"Booking was marked as No Show by the System. The penalty could not be generated because the invoice is already closed.": "Booking was marked as No Show by the System. The penalty could not be generated because the invoice is already closed.",
 	"Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.": "Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.",
 	"The customers were moved to room %roomName%": "The customers were moved to room %roomName%",
 	"The customers were checked in room %roomName%": "The customers were checked in room %roomName%",
@@ -17,6 +18,7 @@
 	"The customers from the booking have been changed": "The customers from the booking have been changed",
 	"The booking has been cancelled": "The booking has been cancelled",
 	"The booking has been cancelled. The booking has a penalty.": "The booking has been cancelled. The booking has a penalty.",
+	"The booking has been cancelled. The penalty could not be generated because the invoice is already closed.": "The booking has been cancelled. The penalty could not be generated because the invoice is already closed.",
 	"The booking has been reactivated.": "The booking has been reactivated.",
 	"The check in has been undone.": "The check in has been undone.",
 	"Some rollaway beds were added in the room to fit the booking capacity": "Some rollaway beds were added in the room to fit the booking capacity",
