#348 Show breakdown of amount, invoice fee and total within the invoices' table from the Shift Report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -198,6 +198,7 @@
 	"Part %partNo%": "Part %partNo%",
 	"Invoice Reference": "Invoice Reference",
 	"Customer": "Customer",
+	"Transaction Fee": "Transaction Fee",
 	"Paid Invoices": "Paid Invoices",
 	"Confirmed": "Confirmed",
 	"Guaranteed": "Guaranteed",
