#326 Fixed typo within the shif report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -219,7 +219,7 @@
 	"Babies (in baby beds)": "Babies (in baby beds)",
 	"Stationary Beds": "Stationary Beds",
 	"Rollaway Beds": "Rollaway Beds",
-	"Payd By Agreement Breakdown": "Payd By Agreement Breakdown",
+	"Paid by agreement breakdown": "Paid by agreement breakdown",
 	"account no.": "account no.",
 	"Amount (fee included)": "Amount (fee included)",
 	"Amount (without fee)": "Amount (without fee)",
