--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -8,6 +8,7 @@
 	"The customers were moved to room %roomName%": "The customers were moved to room %roomName%",
 	"The customers were checked in room %roomName%": "The customers were checked in room %roomName%",
 	"Room %roomName% was reserved for this booking.": "Room %roomName% was reserved for this booking.",
+	"Room %room% was unreserved from the booking.": "Room %room% was unreserved from the booking.",
 	"The room was checked out.": "The room was checked out.",
 	"The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.": "The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.",
 	"The booking was marked as a late arrival and will be marked as no show at %noShowTime%.": "The booking was marked as a late arrival and will be marked as no show at %noShowTime%.",
