#390 Added  paid timestamp column + translation + sorting

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -234,6 +234,7 @@
 	"Paid invoices": "Paid invoices",
 	"Custome Name": "Custome Name",
 	"Total Amount": "Total Amount",
+	"Paid Date": "Paid Date",
 	
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
