--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -235,6 +235,10 @@
 	"Custome Name": "Custome Name",
 	"Total Amount": "Total Amount",
 	"Paid Date": "Paid Date",
+	"Guests Report": "Guests Report",
+	"Departures": "Departures",
+	"Arrivals": "Arrivals",
+	"Stayovers": "Stayovers",
 	
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
