#447 Compute rates including commission on the monthly stats report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -252,6 +252,7 @@
 	"Total breakfast (excluding VAT)": "Total breakfast (excluding VAT)",
 	"Total breakfast internal cost (excluding VAT)": "Total breakfast internal cost (excluding VAT)",
 	"Breakfast": "Breakfast",
+	"Breakfast Included in the Price Product": "Breakfast Included in the Price Product",
 	"Arrivals Total": "Arrivals Total",
 	"Breakfast Revenue Total": "Breakfast Revenue Total",
 	"Business Group": "Business Group",
