[HotFix] On the shift report add 'Paid by agreement' as payment method where needed in the paid invoices section

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -266,7 +266,7 @@
 	"Guest Nights": "Guest Nights",
 	"Room Nights by Purpose of Stay": "Room Nights by Purpose of Stay",
 	"Avg Rate Total": "Avg Rate Total",
-
+	"Paid by Agreement": "Paid by Agreement",
 
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
