#459 Invoice Report - Add Name of Guest staying on the Invoice, as on Shift Report

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -267,6 +267,7 @@
 	"Room Nights by Purpose of Stay": "Room Nights by Purpose of Stay",
 	"Avg Rate Total": "Avg Rate Total",
 	"Paid by Agreement": "Paid by Agreement",
+	"Booking Guest": "Booking Guest",
 
 	// Booking confirmations
 	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
