#461 Monthly Stats Report Changes

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -237,7 +237,7 @@
 	"Paid Date": "Paid Date",
 	"Guests Report": "Guests Report",
 	"Departures": "Departures",
-	"Arrivals": "Arrivals",
+	"Guest Arrivals": "Guest Arrivals",
 	"Stayovers": "Stayovers",
 	"Monthly Stats Report": "Monthly Stats Report",
 	"Guest Nights Total": "Guest Nights Total",
@@ -252,7 +252,8 @@
 	"Total breakfast (excluding VAT)": "Total breakfast (excluding VAT)",
 	"Total breakfast internal cost (excluding VAT)": "Total breakfast internal cost (excluding VAT)",
 	"Breakfast": "Breakfast",
-	"Breakfast Included in the Price Product": "Breakfast Included in the Price Product",
+	"Breakfast Price Charged Included in the Price Product": "Breakfast Price Charged Included in the Price Product",
+	"Breakfast Internal Cost Included in the Price Product": "Breakfast Internal Cost Included in the Price Product",
 	"Arrivals Total": "Arrivals Total",
 	"Breakfast Revenue Total": "Breakfast Revenue Total",
 	"Business Group": "Business Group",
@@ -260,7 +261,7 @@
 	"Leisure Group": "Leisure Group",
 	"Leisure Individual": "Leisure Individual",
 	"Room Nights Total": "Room Nights Total",
-	"Arrivals Home Country": "Arrivals Home Country",
+	"Guest Arrivals Home Country": "Guest Arrivals Home Country",
 	"Guest Nights by Purpose of Stay": "Guest Nights by Purpose of Stay",
 	"Guest Nights by Nationality": "Guest Nights by Nationality",
 	"Guest Nights": "Guest Nights",
