--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -32,13 +32,13 @@
 	"The room was marked as Pick Up": "The room was marked as Pick Up",
 	"The room was marked as Out Of Order": "The room was marked as Out Of Order",
 	"The room was marked as Out Of Service": "The room was marked as Out Of Service",
-	
+
 	"The room was marked as Clean (%maintenanceMessage%)": "The room was marked as Clean (%maintenanceMessage%)",
 	"The room was marked as Dirty (%maintenanceMessage%)": "The room was marked as Dirty (%maintenanceMessage%)",
 	"The room was marked as Pick Up (%maintenanceMessage%)": "The room was marked as Pick Up (%maintenanceMessage%)",
 	"The room was marked as Out Of Order (%maintenanceMessage%)": "The room was marked as Out Of Order (%maintenanceMessage%)",
 	"The room was marked as Out Of Service (%maintenanceMessage%)": "The room was marked as Out Of Service (%maintenanceMessage%)",
-	
+
 	"The room was marked as Dirty (Checked Out)": "The room was marked as Dirty (Checked Out)",
 	"The room was marked as Dirty (Occupied)": "The room was marked as Dirty (Occupied)",
 
@@ -140,7 +140,7 @@
 	"Accomodation for %date%": "Accomodation for %date%",
 	"Transaction fee": "Transaction fee",
 	"transaction fee": "transaction fee",
-	
+
 	// Reports
 	"TotalOccupancy" : "TotalOccupancy",
 	"ConfirmedOccupancy" : "ConfirmedOccupancy",
@@ -268,9 +268,10 @@
 	"Room Nights by Purpose of Stay": "Room Nights by Purpose of Stay",
 	"Avg Rate Total": "Avg Rate Total",
 	"Paid by Agreement": "Paid by Agreement",
-	"Booking Guest": "Booking Guest",
+    "Booking Guest": "Booking Guest",
+    "reinstatement": "reinstatement",
 
 	// Booking confirmations
-	"Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
-	
+    "Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
+
 }
