#527 Display the external booking ref, booking ref, guest name and room on the booking invoice items on the invoice PDF

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -225,7 +225,10 @@
 	"Amount (fee included)": "Amount (fee included)",
 	"Amount (without fee)": "Amount (without fee)",
 	"Bookings by Interval": "Bookings by Interval",
-	"Booking No": "Booking No",
+    "Booking No": "Booking No",
+    "Ext Ref %extRef%": "Ext Ref %extRef%",
+    "Ref %ref%": "Ref %ref%",
+    "Guest %guest%": "Guest %guest%",
 	"External Booking No": "External Booking No",
 	"Guest Name": "Guest Name",
 	"Nights Billed": "Nights Billed",
