#537 Minor fixes to support departure items with no customer

--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -275,6 +275,8 @@
     "reinstatement": "reinstatement",
 
 	// Booking confirmations
-    "Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking."
+    "Booking confirmations are blocked for this booking.": "Booking confirmations are blocked for this booking.",
+
+    "No Customer": "No Customer"
 
 }
