--- a/config/locales/en.json
+++ b/config/locales/en.json
@@ -5,10 +5,11 @@
 	"Booking was marked as No Show by the System": "Booking was marked as No Show by the System",
 	"Booking was marked as No Show by the System. The penalty could not be generated because the invoice is already closed.": "Booking was marked as No Show by the System. The penalty could not be generated because the invoice is already closed.",
 	"Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.": "Booking was marked as No Show by the System. The booking has a penalty on the attached invoice.",
-	"The customers were moved to room %roomName%": "The customers were moved to room %roomName%",
-	"The customers were checked in room %roomName%": "The customers were checked in room %roomName%",
+	"The customers were moved to room %roomName%.": "The customers were moved to room %roomName%.",
+	"The customers were checked in room %roomName%.": "The customers were checked in room %roomName%.",
 	"Room %roomName% was reserved for this booking.": "Room %roomName% was reserved for this booking.",
-	"Room %room% was unreserved from the booking.": "Room %room% was unreserved from the booking.",
+    "Room %room% was unreserved from the booking.": "Room %room% was unreserved from the booking.",
+    "Due to the recent change, the old price %oldPrice% has become %newPrice%.": "Due to the recent change, the old price %oldPrice% has become %newPrice%.",
 	"The room was checked out.": "The room was checked out.",
 	"The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.": "The booking interval was changed from %oldInterval% to %newInterval%. The old price %oldPrice% has become %newPrice%.",
 	"The booking was marked as a late arrival and will be marked as no show at %noShowTime%.": "The booking was marked as a late arrival and will be marked as no show at %noShowTime%.",
